--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest NODE_ENV = test",
+    "test": "jest  --detectOpenHandles  NODE_ENV = test",
     "start": "node index.js "
   },
   "keywords": [],
